--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 * {
     font-family: 'Kumbh Sans', sans-serif;
+    margin: 0;
 }
 
 .header {
@@ -42,7 +43,20 @@
 }
 
 .body {
-    max-width: 500px;
+    width: 100%;
+    height: 850px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+
+
+
+
+.info {
+    max-width: 460px;
 }
 
 .fornecedor {
@@ -51,19 +65,38 @@
 
 .nome-produto {
     color: hsl(220, 13%, 13%);
+    font-size: 1.3rem;
+    margin-bottom: 40px;
+    margin-top: 20px;
 }
 
 .descri {
     color: hsl(219, 9%, 45%);
+    margin-bottom: 20px;
+}
+
+.preco-desc {
+    display: flex;
+    align-items: center;
+    margin: 0px;
 }
 
 .preco {
     color: hsl(220, 13%, 13%);
+    font-size: 1.2rem;
+    margin-right: 3.5%;
 }
 
 .desc {
     background-color: hsl(25, 100%, 94%);
     color: hsl(26, 100%, 55%);
+    padding: 0px 5px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.85rem;
+    border-radius: 5px;
 }
 
 .preco-total {
@@ -71,8 +104,23 @@
     color: hsl(220, 14%, 75%);
 }
 
+
+.botoes {
+    display: flex;
+    align-items: center;
+}
+
 .quant-prod {
     background-color: hsl(223, 64%, 98%);
+    display: flex;
+    align-items: center;
+    width: 120px;
+    padding: 15px;
+    justify-content: space-between;
+    border-radius: 5px;
+    color: hsl(220, 13%, 13%);
+    font-weight: 700;
+    margin-right: 3%;
 }
 
 .menos {
@@ -90,4 +138,9 @@
     color: #fff;
     box-shadow: 0px 10px 10px hsl(25, 100%, 94%);
     border: none;
+    font-size: 1.1rem;
+    width: 260px;
+    height: 50px;
+    padding: 0px 10px;
+    border-radius: 10px;
 }
