--- a/style.css
+++ b/style.css
@@ -50,9 +50,56 @@
     justify-content: center;
 }
 
+.imagens{
+    width: 600px;
+    display: flex;
+    flex-direction: column;
+    margin-right: 5%;
+}
 
+.imagemG {
+    margin: 50px;
+}
 
+.imagemGrande {
+    width: 100%;
+    height: 500px;
+    border-radius: 15px;
+}
 
+.imagensP {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.imagemPequena1 {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    opacity: 30%;
+}
+.imagemPequena1div {
+    width: 100px;
+    height: 100px;
+    border-radius: 12px;
+    border: 2.5px solid orange;
+}
+.imagemPequena2 {
+    width: 100px;
+    height: 100px;
+    border-radius: 10px;
+}
+.imagemPequena3 {
+    width: 100px;
+    height: 100px;
+    border-radius: 10px;
+}
+.imagemPequena4 {
+    width: 100px;
+    height: 100px;
+    border-radius: 10px;
+}
 
 
 .info {
@@ -72,13 +119,13 @@
 
 .descri {
     color: hsl(219, 9%, 45%);
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 
 .preco-desc {
     display: flex;
     align-items: center;
-    margin: 0px;
+    margin-bottom: 10px;
 }
 
 .preco {
@@ -102,6 +149,7 @@
 .preco-total {
     text-decoration: line-through;
     color: hsl(220, 14%, 75%);
+    margin-bottom: 50px;
 }
 
 
