--- a/style.css
+++ b/style.css
@@ -77,28 +77,51 @@
     width: 100%;
     height: 100%;
     border-radius: 10px;
-    opacity: 30%;
 }
-.imagemPequena1div {
+
+#imagemPequena1 {
     width: 100px;
     height: 100px;
     border-radius: 12px;
-    border: 2.5px solid orange;
 }
 .imagemPequena2 {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+#imagemPequena2 {
     width: 100px;
     height: 100px;
-    border-radius: 10px;
+    border-radius: 12px;
 }
 .imagemPequena3 {
-    width: 100px;
-    height: 100px;
+    width: 100%;
+    height: 100%;
     border-radius: 10px;
 }
-.imagemPequena4 {
+#imagemPequena3 {
     width: 100px;
     height: 100px;
+    border-radius: 12px;
+}
+.imagemPequena4 {
+    width: 100%;
+    height: 100%;
     border-radius: 10px;
+}
+#imagemPequena4 {
+    width: 100px;
+    height: 100px;
+    border-radius: 12px;
+}
+
+
+.border{
+    border: 2.5px solid hsl(26, 100%, 60%);
+}
+
+.opacity {
+    opacity: 30%;
 }
 
 
