--- a/style.css
+++ b/style.css
@@ -215,3 +215,9 @@
     padding: 0px 10px;
     border-radius: 10px;
 }
+
+.modal {
+    width: 100%;
+    height: 100%;
+    background-color: hsl(0, 0%, 0%);
+}
