--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap');
 
 * {
     font-family: 'Kumbh Sans', sans-serif;
@@ -40,6 +40,109 @@
     width: 50px;
     height: 50px;
     margin-left: 50px;
+}
+
+.carinho {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.numQuantProd {
+    color: #fff;
+    background-color: hsl(26, 100%, 55%);
+    width: 20px;
+    height: 15px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.8rem;
+    margin: 0 0 0 12px;
+}
+
+.cart-span {
+    width: 450px;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0px 20px 30px hsl(0, 1%, 81%);
+    position: fixed;
+    background-color: #fff;
+    z-index: 1;
+    right: 75px;
+    top: 76px;
+    transition: 0.5 all ease-in-out;
+}
+
+.title {
+    font-family: 'Kumbh Sans', monospace;
+    font-weight: 700;
+    padding: 20px;
+    border-bottom: 1px solid #CCC;
+}
+
+.prod-info {
+    display: flex;
+    padding: 30px;
+}
+
+.info {
+    display: flex;
+    flex-direction: column;
+    margin-right: 20px;
+}
+
+.titulo-prod {    
+    font-family: 'Kumbh Sans', monospace;
+    font-weight: 300;
+    color: hsl(219, 9%, 45%);
+
+}
+
+.multi-preco {
+    font-family: 'Kumbh Sans', monospace;
+    font-weight: 300;
+    color: hsl(219, 9%, 45%);
+    display: flex;
+    margin-right: 5px;
+}
+
+.multi-total  {
+    font-family: 'Kumbh Sans', monospace;
+    font-weight: 500;
+    font-size: 1.5rem;
+}
+
+.imagem-carrinho {
+    width: 70px;
+    height: 70px;
+    border-radius: 4px;
+    margin-right: 20px;
+}
+
+.lixeira {
+    display: flex;
+    align-items: center;
+}
+
+.checkout {
+    display: flex;
+    justify-content: center;
+}
+
+.final-compra {
+    background-color: hsl(26, 100%, 55%);
+    color: #fff;
+    border: none;
+    font-size: 1.1rem;
+    width: 90%;
+    height: 70px;
+    padding: 0px 10px;
+    border-radius: 10px;
+    transition: 0.3s all ease-in-out;
+    cursor: pointer;
 }
 
 .body {
@@ -158,6 +261,8 @@
 }
 
 .desc {
+    font-family: 'Kumbh Sans', monospace;
+    font-weight: 200;
     background-color: hsl(25, 100%, 94%);
     color: hsl(26, 100%, 55%);
     padding: 0px 5px;
@@ -197,11 +302,13 @@
 .menos {
     background-color: #0000;
     border: none;
+    cursor: pointer;
 }
 
 .mais {
     background-color: #0000;
     border: none;
+    cursor: pointer;
 }
 
 .add-cart-button {
@@ -214,10 +321,13 @@
     height: 50px;
     padding: 0px 10px;
     border-radius: 10px;
+    transition: 0.3s all ease-in-out;
+    cursor: pointer;
 }
 
-.modal {
-    width: 100%;
-    height: 100%;
-    background-color: hsl(0, 0%, 0%);
+.add-cart-button:hover {
+    background-color: hsl(26, 92%, 70%);
+    color: #fff;
+    box-shadow: 0px 10px 10px hsl(25, 100%, 90%);
+    transition: 0.3s all ease-in-out;
 }
