--- a/style.css
+++ b/style.css
@@ -42,11 +42,12 @@
     margin-left: 50px;
 }
 
-.carinho {
+.carrinho {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 
 .numQuantProd {
@@ -74,6 +75,14 @@
     right: 75px;
     top: 76px;
     transition: 0.5 all ease-in-out;
+}
+
+.on {
+    display: flex;
+}
+
+.off {
+    display: none;
 }
 
 .title {
@@ -109,6 +118,14 @@
     margin-right: 5px;
 }
 
+.multi-preco2 {
+    font-family: 'Kumbh Sans', monospace;
+    font-weight: 300;
+    color: hsl(219, 9%, 45%);
+    display: flex;
+    margin-right: 5px;
+}
+
 .multi-total  {
     font-family: 'Kumbh Sans', monospace;
     font-weight: 500;
@@ -125,6 +142,7 @@
 .lixeira {
     display: flex;
     align-items: center;
+    cursor: pointer;
 }
 
 .checkout {
@@ -143,6 +161,23 @@
     border-radius: 10px;
     transition: 0.3s all ease-in-out;
     cursor: pointer;
+}
+
+.contentCarrinho {
+    flex-direction: column;
+}
+
+.carrinhoVazio {
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
+.carrinhoVazioText {
+    font-family: 'Kumbh Sans', monospace;
+    font-weight: 200;
+    color: rgb(142, 142, 140);
 }
 
 .body {
@@ -186,6 +221,7 @@
     width: 100px;
     height: 100px;
     border-radius: 12px;
+    cursor: pointer;
 }
 .imagemPequena2 {
     width: 100%;
@@ -196,6 +232,7 @@
     width: 100px;
     height: 100px;
     border-radius: 12px;
+    cursor: pointer;
 }
 .imagemPequena3 {
     width: 100%;
@@ -206,6 +243,7 @@
     width: 100px;
     height: 100px;
     border-radius: 12px;
+    cursor: pointer;
 }
 .imagemPequena4 {
     width: 100%;
@@ -216,6 +254,7 @@
     width: 100px;
     height: 100px;
     border-radius: 12px;
+    cursor: pointer;
 }
 
 
@@ -303,12 +342,14 @@
     background-color: #0000;
     border: none;
     cursor: pointer;
+    outline-color: #0000;
 }
 
 .mais {
     background-color: #0000;
     border: none;
     cursor: pointer;
+    outline-color: #0000;
 }
 
 .add-cart-button {
@@ -323,6 +364,7 @@
     border-radius: 10px;
     transition: 0.3s all ease-in-out;
     cursor: pointer;
+    outline-color: #0000;
 }
 
 .add-cart-button:hover {
@@ -330,4 +372,5 @@
     color: #fff;
     box-shadow: 0px 10px 10px hsl(25, 100%, 90%);
     transition: 0.3s all ease-in-out;
+    outline-color: none;
 }
