--- a/style.css
+++ b/style.css
@@ -28,7 +28,14 @@
 }
 
 .menu-item {
-    margin-left: 20px;
+    margin-left: 25px;
+    margin-bottom: 10px;
+    padding: 15px;
+    cursor: pointer;
+}
+
+.barraLaranja {
+    border-bottom: 5px solid orange;
 }
 
 .ii {
@@ -39,6 +46,7 @@
 .foto-perfil {
     width: 50px;
     height: 50px;
+    border-radius: 25px;
     margin-left: 50px;
 }
 
@@ -75,6 +83,7 @@
     right: 75px;
     top: 76px;
     transition: 0.5 all ease-in-out;
+    padding: 10px;
 }
 
 .on {
@@ -205,6 +214,12 @@
     border-radius: 15px;
 }
 
+.imagemGrande2 {
+    width: 100%;
+    height: 500px;
+    border-radius: 15px;
+}
+
 .imagensP {
     display: flex;
     align-items: center;
@@ -215,6 +230,11 @@
     width: 100%;
     height: 100%;
     border-radius: 10px;
+    transition: .3s all ease-in-out;
+}
+
+.imagemPequena1:hover {
+    opacity: 0.3;
 }
 
 #imagemPequena1 {
@@ -227,7 +247,13 @@
     width: 100%;
     height: 100%;
     border-radius: 10px;
+    transition: .3s all ease-in-out;
 }
+
+.imagemPequena2:hover {
+    opacity: 0.3;
+}
+
 #imagemPequena2 {
     width: 100px;
     height: 100px;
@@ -238,7 +264,13 @@
     width: 100%;
     height: 100%;
     border-radius: 10px;
+    transition: .3s all ease-in-out;
 }
+
+.imagemPequena3:hover {
+    opacity: 0.3;
+}
+
 #imagemPequena3 {
     width: 100px;
     height: 100px;
@@ -249,7 +281,13 @@
     width: 100%;
     height: 100%;
     border-radius: 10px;
+    transition: .3s all ease-in-out;
 }
+
+.imagemPequena4:hover {
+    opacity: 0.3;
+}
+
 #imagemPequena4 {
     width: 100px;
     height: 100px;
@@ -373,4 +411,14 @@
     box-shadow: 0px 10px 10px hsl(25, 100%, 90%);
     transition: 0.3s all ease-in-out;
     outline-color: none;
+}
+
+dialog::backdrop {
+    background-color: rgb(0,0,0, 0.6);
+}
+
+dialog {
+    border: 0px;
+    border-radius: 0.5rem;
+    background-color: #0000;
 }
