--- a/style.css
+++ b/style.css
@@ -204,20 +204,48 @@
     margin-right: 5%;
 }
 
+.closeModal {
+    cursor: pointer;
+}
+
 .imagemG {
     margin: 50px;
+    display: flex;
+    align-items: center;
+}
+
+.setas {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 50%;
+    transition: .3s all ease-in-out;
+    cursor: pointer;
+}
+
+.setas:hover {
+    background-color: #dcdada;
 }
 
 .imagemGrande {
     width: 100%;
     height: 500px;
     border-radius: 15px;
+    cursor: pointer;
+}
+
+.contentModal {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2% 0 0 0 ;
+    margin: 0;
 }
 
 .imagemGrande2 {
-    width: 100%;
-    height: 500px;
+    width: 700px;
+    height: 600px;
     border-radius: 15px;
+    margin: 0;
 }
 
 .imagensP {
@@ -225,6 +253,14 @@
     align-items: center;
     justify-content: space-around;
 }
+
+.imagensP2 {
+    width: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 
 .imagemPequena1 {
     width: 100%;
@@ -258,7 +294,7 @@
     width: 100px;
     height: 100px;
     border-radius: 12px;
-    cursor: pointer;
+    cursor: pointer
 }
 .imagemPequena3 {
     width: 100%;
@@ -293,6 +329,82 @@
     height: 100px;
     border-radius: 12px;
     cursor: pointer;
+}
+
+.imagemPequena5 {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    transition: .3s all ease-in-out;
+}
+
+.imagemPequena5:hover {
+    opacity: 0.3;
+}
+
+#imagemPequena5 {
+    width: 100px;
+    height: 100px;
+    border-radius: 12px;
+    cursor: pointer;
+    background-color: #fff;
+    margin-right: 20px;
+}
+.imagemPequena6 {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    transition: .3s all ease-in-out;
+}
+
+.imagemPequena6:hover {
+    opacity: 0.3;
+}
+
+#imagemPequena6 {
+    width: 100px;
+    height: 100px;
+    border-radius: 12px;
+    cursor: pointer;
+    background-color: #fff;
+    margin-right: 20px;
+}
+.imagemPequena7 {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    transition: .3s all ease-in-out;
+}
+
+.imagemPequena7:hover {
+    opacity: 0.3;
+}
+
+#imagemPequena7 {
+    width: 100px;
+    height: 100px;
+    border-radius: 12px;
+    cursor: pointer;
+    background-color: #fff;
+    margin-right: 20px;
+}
+.imagemPequena8 {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    transition: .3s all ease-in-out;
+}
+
+.imagemPequena8:hover {
+    opacity: 0.3;
+}
+
+#imagemPequena8 {
+    width: 100px;
+    height: 100px;
+    border-radius: 12px;
+    cursor: pointer;
+    background-color: #fff;
 }
 
 
@@ -418,7 +530,13 @@ dialog::backdrop {
 }
 
 dialog {
-    border: 0px;
+    border: none;
     border-radius: 0.5rem;
     background-color: #0000;
+    width: 100%;
+    height: 96%;
+    flex-direction: column;
+    outline: none;
+    align-items: center;
+    justify-content: center;
 }
