--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     margin: 0;
 }
 
+.menu-options {
+    display: none;
+}
+
 .header {
     display: flex;
     justify-content: space-between;
@@ -540,3 +544,184 @@ dialog {
     align-items: center;
     justify-content: center;
 }
+
+.assetas {
+    display: none;
+}
+
+/* Estilizações para celular*/
+
+@media (max-width: 500px) {     
+    .header {
+        width: 350px;
+        display: flex;
+        padding: 1.2% 10% 1.2% ;
+        margin-bottom: 20px;
+        z-index: 1;
+    }
+
+    .foto-perfil {
+        width: 50px;
+        height: 50px;
+        border-radius: 25px;
+    }
+
+    .menu-options {
+        color: hsl(219, 9%, 45%);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-right: 20px;
+    }
+   
+    .menu {
+        display: none;
+    }
+
+    .body {
+        width: 400px;
+        left: 200px;
+        display: flex;;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .imagemG {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .imagemGrande {
+        width: 100%;
+        height:360px;
+        border-radius: 0px;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .assetas {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        position: absolute;
+        width: 400px;
+        margin-left: 50px;
+    }
+
+    .setas2 {
+        background-color: #fff;
+        padding: 20px;
+        border-radius: 50%;
+        transition: .3s all ease-in-out;
+        cursor: pointer;
+    }
+
+    .setas2:hover {
+        background-color: antiquewhite;
+    }
+
+    .imagens{
+        width: 500px;
+        height:400px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        margin-bottom: 15px;
+    }
+
+    .imagensP {
+        display: none;
+    }
+
+    dialog {
+        display: none;
+    }
+
+    .info {
+        margin: 10px;
+    }
+
+    .relacionadoAPreco {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .preco-total {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .botoes {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .quant-prod {
+        width: 230px;
+        height: 50px;
+        padding: 5px;
+        border-radius: 10px;
+        margin-bottom: 20px;
+    }
+
+    .cart-span {
+        width: 400px;
+        height: 300px;
+        display: flex;
+        flex-direction: column;
+        box-shadow: 0px 20px 30px hsl(0, 0%, 26%);
+        position: fixed;
+        background-color: #fff;
+        z-index: 1;
+        right:2px;
+        top: 50px;
+        transition: 0.5 all ease-in-out;
+        padding: 10px;
+    }
+
+    .on {
+        display: flex;
+    }
+
+    .off {
+        display: none;
+    }
+    
+    .add-cart-button {
+        background-color: hsl(26, 100%, 55%);
+        color: #fff;
+        box-shadow: 0px 10px 10px hsl(25, 100%, 94%);
+        border: none;
+        font-size: 1.1rem;
+        width: 260px;
+        height: 50px;
+        padding: 0px 10px;
+        border-radius: 10px;
+        transition: 0.3s all ease-in-out;
+        cursor: pointer;
+        outline-color: #0000;
+        margin-bottom: 5px;
+    }
+    
+    .add-cart-button:hover {
+        background-color: hsl(26, 92%, 70%);
+        color: #fff;
+        box-shadow: 0px 10px 10px hsl(25, 100%, 90%);
+        transition: 0.3s all ease-in-out;
+        outline-color: none;
+    }
+
+    .prod-info {
+        display: flex;
+        padding: 15px;
+    }
+}
+
