--- a/style.css
+++ b/style.css
@@ -955,7 +955,7 @@ dialog {
 
 @media (max-width: 400px) {
     .header {
-        width: 450px;
+        width: 420px;
         display: flex;
         padding: 1.2% 10% 1.2% ;
         margin-bottom: 20px;
@@ -963,7 +963,7 @@ dialog {
     }
 
     .body {
-        width: 300px;
+        width: 250px;
         padding: 0 20px 0 20px;
         display: flex;
         flex-direction: column;
@@ -1004,7 +1004,70 @@ dialog {
         justify-content: space-between;
         z-index: 0.5;
         position: absolute;
-        width: 500px;
+        width: 400px;
+        margin-left: 65px;
+    }
+
+    .info {
+        display: flex;
+        flex-direction: column;
+        margin-right: -180px;
+        width: 800px;
+    }
+}
+
+@media (max-width: 300px) {
+    .header {
+        width: 440px;
+        display: flex;
+        padding: 1.2% 10% 1.2% ;
+        margin-bottom: 20px;
+        z-index: 1;
+    }
+
+    .body {
+        width: 260px;
+        padding: 0 20px 0 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .imagens{
+        width: 300px;
+        height: 400px;
+        margin: 130px;
+        display: flex;
+        flex-direction: column;
+        margin-right: 5%;
+    }
+
+    .imagemG {
+        margin-top: 98px;
+        width: 600px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .imagemGrande {
+        width: 100%;
+        height:460px;
+        border-radius: 0px;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .assetas {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        z-index: 0.5;
+        position: absolute;
+        width: 400px;
         margin-left: 65px;
     }
 
