--- a/style.css
+++ b/style.css
@@ -1079,6 +1079,69 @@ dialog {
     }
 }
 
+@media (max-width: 200px) {
+    .header {
+        width: 200px;
+        display: none;
+        padding: 1.2% 10% 1.2% ;
+        margin-bottom: 20px;
+        z-index: 1;
+    }
+
+    .body {
+        width: 260px;
+        padding: 0 20px 0 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .imagens{
+        width: 300px;
+        height: 400px;
+        margin: 130px;
+        display: flex;
+        flex-direction: column;
+        margin-right: 5%;
+    }
+
+    .imagemG {
+        margin-top: 98px;
+        width: 600px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .imagemGrande {
+        width: 100%;
+        height:460px;
+        border-radius: 0px;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .assetas {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        z-index: 0.5;
+        position: absolute;
+        width: 400px;
+        margin-left: 65px;
+    }
+
+    .info {
+        display: flex;
+        flex-direction: column;
+        margin-right: -180px;
+        width: 800px;
+    }
+}
+
 .show-menu-options {
     position: fixed;
     z-index: 1;
