--- a/style.css
+++ b/style.css
@@ -199,7 +199,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #2f3f2f;
 }
 
 .imagens{
@@ -917,7 +916,6 @@ dialog {
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        background-color: #6f3f2f;
     }
 
     .imagemG {
@@ -957,7 +955,7 @@ dialog {
 
 @media (max-width: 400px) {
     .header {
-        width: 420px;
+        width: 300px;
         display: flex;
         padding: 1.2% 10% 1.2% ;
         margin-bottom: 20px;
@@ -971,21 +969,21 @@ dialog {
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        background-color: #2f7f2f;
     }
 
     .imagens{
         width: 300px;
         height: 400px;
-        margin: 130px;
+        margin: 32px 130px 30px 130px;
         display: flex;
         flex-direction: column;
         margin-right: 5%;
     }
 
     .imagemG {
-        margin-top: 98px;
-        width: 600px;
+        margin-top: 90px;
+        margin-left: 10px;
+        width: 370px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -993,7 +991,7 @@ dialog {
 
     .imagemGrande {
         width: 100%;
-        height:460px;
+        height:360px;
         border-radius: 0px;
         cursor: pointer;
         display: flex;
@@ -1007,143 +1005,16 @@ dialog {
         justify-content: space-between;
         z-index: 0.5;
         position: absolute;
-        width: 400px;
-        margin-left: 65px;
+        width: 340px;
+        margin-left: 0px;
     }
 
     .info {
         display: flex;
         flex-direction: column;
-        margin-right: -180px;
-        width: 800px;
-    }
-}
-
-@media (max-width: 300px) {
-    .header {
-        width: 440px;
-        display: flex;
-        padding: 1.2% 10% 1.2% ;
-        margin-bottom: 20px;
-        z-index: 1;
-    }
-
-    .body {
-        width: 260px;
-        padding: 0 20px 0 20px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        background-color: #2f3f9f;
-    }
-
-    .imagens{
+        margin-top: 0;
+        margin-right: -80px;
         width: 300px;
-        height: 400px;
-        margin: 130px;
-        display: flex;
-        flex-direction: column;
-        margin-right: 5%;
-    }
-
-    .imagemG {
-        margin-top: 98px;
-        width: 600px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .imagemGrande {
-        width: 100%;
-        height:460px;
-        border-radius: 0px;
-        cursor: pointer;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .assetas {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        z-index: 0.5;
-        position: absolute;
-        width: 400px;
-        margin-left: 65px;
-    }
-
-    .info {
-        display: flex;
-        flex-direction: column;
-        margin-right: -180px;
-        width: 800px;
-    }
-}
-
-@media (max-width: 200px) {
-    .header {
-        width: 200px;
-        display: none;
-        padding: 1.2% 10% 1.2% ;
-        margin-bottom: 20px;
-        z-index: 1;
-    }
-
-    .body {
-        width: 260px;
-        padding: 0 20px 0 20px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        background-color: #000;
-    }
-
-    .imagens{
-        width: 300px;
-        height: 400px;
-        margin: 130px;
-        display: flex;
-        flex-direction: column;
-        margin-right: 5%;
-    }
-
-    .imagemG {
-        margin-top: 98px;
-        width: 600px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .imagemGrande {
-        width: 100%;
-        height:460px;
-        border-radius: 0px;
-        cursor: pointer;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .assetas {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        z-index: 0.5;
-        position: absolute;
-        width: 400px;
-        margin-left: 65px;
-    }
-
-    .info {
-        display: flex;
-        flex-direction: column;
-        margin-right: -180px;
-        width: 800px;
     }
 }
 
