--- a/style.css
+++ b/style.css
@@ -978,6 +978,24 @@ dialog {
         display: flex;
         flex-direction: column;
         margin-right: 5%;
+        z-index: 0.5;
+    }
+
+    .carrinho {
+        z-index: 1;
+    }
+
+    .cart-span {
+        width: 350px;
+        height: 350px;
+        flex-direction: column;
+        box-shadow: 0px 20px 30px hsl(0, 1%, 81%);
+        position: fixed;
+        background-color: #fff;
+        z-index: 1;
+        right: 2px;
+        top: 58px;
+        transition: 0.5 all ease-in-out;
     }
 
     .imagemG {
